--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-icons": "4.10.1",
     "svix": "1.8.1",
     "swr": "2.2.1",
+    "ts-node": "^10.9.1",
     "uuid": "9.0.0",
     "yup": "1.2.0",
     "zod": "3.22.1"
