refactor tasks creation

--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,9 @@ REDIS_UI_PORT=7843
 
 # Minio S3
 MINIO_PORT=9000
+MINIO_HOST=minio
+PUBLIC_STORAGE_ENDPOINT=https://${MINIO_HOST}:${MINIO_PORT}
+ACCESS_KEY=root
+SECRET_KEY=password
+STORAGE_REGION=
+PUBLIC_STORAGE_BUCKET_NAME=akilli
