--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.410.0",
     "@boxyhq/saml-jackson": "1.11.2",
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "3.3.1",
     "@next-auth/prisma-adapter": "1.0.7",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.2.0",
     "@retracedhq/logs-viewer": "2.5.0",
     "@retracedhq/retraced": "0.7.0",
     "@tailwindcss/typography": "0.5.9",
     "autoprefixer": "10.4.15",
+    "aws-sdk": "^2.1455.0",
     "axios": "1.4.0",
     "bcryptjs": "2.4.3",
     "classnames": "2.3.2",
