--- a/.env.example
+++ b/.env.example
@@ -67,8 +67,8 @@ REDIS_UI_PORT=7843
 # Minio S3
 MINIO_PORT=9000
 MINIO_HOST=minio
-PUBLIC_STORAGE_ENDPOINT=https://${MINIO_HOST}:${MINIO_PORT}
+PUBLIC_STORAGE_ENDPOINT=http://${MINIO_HOST}:${MINIO_PORT}
 ACCESS_KEY=root
 SECRET_KEY=password
-STORAGE_REGION=
+STORAGE_REGION=us-east-1
 PUBLIC_STORAGE_BUCKET_NAME=akilli
