--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "crypto-js": "4.1.1",
     "formik": "2.4.3",
     "i18next": "22.5.1",
+    "minio": "^7.1.3",
     "mixpanel-browser": "^2.47.0",
     "moment": "2.29.4",
     "next": "13.4.19",
