--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@retracedhq/logs-viewer": "2.5.0",
     "@retracedhq/retraced": "0.7.0",
     "@tailwindcss/typography": "0.5.9",
+    "@tiptap/pm": "^2.1.11",
+    "@tiptap/react": "^2.1.11",
+    "@tiptap/starter-kit": "^2.1.11",
     "autoprefixer": "10.4.15",
     "aws-sdk": "^2.1455.0",
     "axios": "1.4.0",
