--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.425.0",
     "@boxyhq/saml-jackson": "1.12.1",
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "3.3.1",
