--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.425.0",
+    "@aws-sdk/s3-request-presigner": "^3.427.0",
     "@boxyhq/saml-jackson": "1.12.1",
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "3.3.1",
