--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^5.1.1",
     "@retracedhq/logs-viewer": "2.5.1",
     "@retracedhq/retraced": "0.7.0",
+    "@smithy/fetch-http-handler": "^2.2.2",
     "@tailwindcss/typography": "0.5.9",
     "autoprefixer": "10.4.15",
     "axios": "1.4.0",
