--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "docker": "./scripts/dev.sh",
     "dev": "next dev --port 4002",
-    "build": "prisma generate && prisma db push --accept-data-loss && next build",
+    "build": "next build",
     "start": "next start --port 4002",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
