--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^5.1.1",
     "@retracedhq/logs-viewer": "2.5.1",
     "@retracedhq/retraced": "0.7.0",
+    "@boxyhq/react-ui": "3.3.13",
     "@smithy/fetch-http-handler": "^2.2.3",
     "@tailwindcss/typography": "0.5.9",
     "autoprefixer": "10.4.15",
