--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.427.0",
     "@aws-sdk/s3-request-presigner": "^3.427.0",
+    "@boxyhq/react-ui": "3.3.13",
     "@boxyhq/saml-jackson": "1.12.1",
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "3.3.1",
@@ -30,7 +31,6 @@
     "@prisma/client": "^5.1.1",
     "@retracedhq/logs-viewer": "2.5.1",
     "@retracedhq/retraced": "0.7.0",
-    "@boxyhq/react-ui": "3.3.13",
     "@smithy/fetch-http-handler": "^2.2.3",
     "@tailwindcss/typography": "0.5.9",
     "autoprefixer": "10.4.15",
@@ -39,7 +39,10 @@
     "classnames": "2.3.2",
     "cookies-next": "2.1.2",
     "crypto-js": "4.1.1",
+    "formidable": "^3.5.1",
     "formik": "2.4.3",
+    "mime": "^3.0.0",
+    "pretty-ms": "^8.0.0",
     "i18next": "22.5.1",
     "mixpanel-browser": "^2.47.0",
     "moment": "2.29.4",
@@ -69,6 +72,8 @@
     "@types/crypto-js": "4.1.1",
     "@types/jest": "29.5.3",
     "@types/mixpanel-browser": "^2.47.3",
+    "@types/formidable": "^2.0.5",
+    "@types/mime": "^2.0.3",
     "@types/mocha": "10.0.1",
     "@types/node": "20.5.6",
     "@types/nodemailer": "6.4.9",
