--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "postinstall": "npx prisma generate"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.317.0",
-    "@aws-sdk/lib-storage": "^3.317.0",
-    "@aws-sdk/s3-request-presigner": "^3.317.0",
     "@boxyhq/react-ui": "3.3.13",
     "@boxyhq/saml-jackson": "1.12.1",
     "@heroicons/react": "2.0.18",
@@ -32,7 +29,7 @@
     "@prisma/client": "^5.1.1",
     "@retracedhq/logs-viewer": "2.5.1",
     "@retracedhq/retraced": "0.7.0",
-    "@smithy/fetch-http-handler": "^2.2.3",
+    "@smithy/fetch-http-handler": "^2.2.2",
     "@tailwindcss/typography": "0.5.9",
     "autoprefixer": "10.4.15",
     "axios": "1.4.0",
@@ -49,6 +46,7 @@
     "next": "13.5.3",
     "next-auth": "4.23.1",
     "next-i18next": "13.3.0",
+    "next-s3-upload": "^0.3.3",
     "nodemailer": "6.9.4",
     "pretty-ms": "^8.0.0",
     "react": "18.2.0",
