--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "next-i18next": "13.3.0",
     "next-s3-upload": "^0.3.3",
     "nodemailer": "6.9.4",
+    "papaparse": "^5.4.1",
     "pretty-ms": "^8.0.0",
     "react": "18.2.0",
     "react-daisyui": "3.1.2",
