chore(.gitignore): ignore documentation markdown files in the docs directory chore(.gitignore): ignore JavaScript files in the scripts directory fix(CreateTask.tsx): fix accessing name property of languages array fix(CreateTranscript.tsx): fix accessing name property of languages array feat(parser.ts): add csvParser function to parse CSV files chore(package.json): add ts-node package as a development dependency feat(transcripts.tsx): add ImportFile component and handle file import feat(transcripts.tsx): add file import button and logic chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused imports chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unused code chore(transcripts.tsx): remove unuse

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 # production
 /build
 
+./docs/*.md
 # misc
 .DS_Store
 *.pem
@@ -47,3 +48,5 @@ yarn-error.log*
 
 # eslint
 .eslintcache
+
+./scripts/*.js
