--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "3.3.1",
     "@next-auth/prisma-adapter": "1.0.7",
+    "react-intersection-observer": "^8.32.1",
+    "react-query": "^3.24.3",
     "@prisma/client": "^5.1.1",
     "@retracedhq/logs-viewer": "2.5.1",
     "@retracedhq/retraced": "0.7.0",
@@ -59,6 +61,7 @@
     "svix": "1.8.1",
     "swr": "2.2.1",
     "ts-node": "^10.9.1",
+    "usehooks-ts": "^2.9.1",
     "uuid": "9.0.0",
     "yup": "1.2.0",
     "zod": "3.22.4"
