--- a/package.json
+++ b/package.json
@@ -26,8 +26,6 @@
     "@heroicons/react": "2.0.18",
     "@hookform/resolvers": "3.3.1",
     "@next-auth/prisma-adapter": "1.0.7",
-    "react-intersection-observer": "^8.32.1",
-    "react-query": "^3.24.3",
     "@prisma/client": "^5.1.1",
     "@retracedhq/logs-viewer": "2.5.1",
     "@retracedhq/retraced": "0.7.0",
@@ -45,6 +43,7 @@
     "mime": "^3.0.0",
     "mixpanel-browser": "^2.47.0",
     "moment": "2.29.4",
+    "nanoid": "^5.0.2",
     "next": "13.5.3",
     "next-auth": "4.23.1",
     "next-i18next": "13.3.0",
@@ -58,6 +57,8 @@
     "react-hot-toast": "2.4.1",
     "react-i18next": "12.3.1",
     "react-icons": "4.10.1",
+    "react-intersection-observer": "^8.32.1",
+    "react-query": "^3.24.3",
     "svix": "1.8.1",
     "swr": "2.2.1",
     "ts-node": "^10.9.1",
