--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "AkilliAI Transcription APP",
   "description": "The Open Source Next.js Enterprise SaaS Starter Kit. Next.js based SaaS starter kit that saves you months of development by starting you off with all the features that are the same in every product, so you can focus on what makes your app unique.",
   "repository": "https://github.com/boxyhq/saas-starter-kit",
-  "logo": "https://akilli.ai/img/logo.png",
+  "logo": "https://akilli-eta.vercel.app/logo.png",
   "keywords": ["saas", "starter", "kit", "enterprise"],
   "env": {
     "NEXTAUTH_URL": {
